# rust_truck_router

./: .gitignore  Cargo.toml  README.md
eval/plotting/: ggplot_colors.py  make_plots.py  make_plots_thesis.py  perfprof.py
src/: index_heap.rs  io.rs  lib.rs  main.rs  osm_id_mapper.rs  rrr_heap.rs  rrr_indexed_heap.rs  time.rs  timestamped_vector.rs  types.rs
src/algo/: astar.rs  ch.rs  ch_potential.rs  core_ch.rs  csp.rs  csp_2.rs  csp_2_bidir.rs  csp_2_bidir_chpot.rs  csp_2_core_ch.rs  csp_2_core_ch_chpot.rs  csp_2_core_ch_chpot_no_bw.rs  csp_2_core_ch_chpot_no_bw_no_prune.rs  csp_2_core_ch_chpot_no_prune.rs  csp_bidir.rs  csp_bidir_chpot.rs  csp_core_ch.rs  csp_core_ch_chpot.rs  csp_core_ch_chpot_add_prune.rs  csp_core_ch_chpot_no_bw.rs  csp_core_ch_chpot_no_bw_no_prune.rs  csp_core_ch_chpot_no_prune.rs  dijkstra.rs  mcd.rs  mcd_2.rs  mod.rs  one_break_core_ch.rs
src/experiments/: measurement.rs
test_data/ch_instances/ch/: order
test_data/ch_instances/core_instance/: graph.dot  travel_time
tests/: bunch_of_csp_queries.rs  ch.rs  ch_pot.rs  csp_on_road_network.rs  test_bunch_of_chpot_core_ch_csp_2_queries.rs  test_bunch_of_chpot_core_ch_csp_queries.rs  test_bunch_of_core_ch_csp_2_queries.rs  test_bunch_of_core_ch_csp_queries.rs  test_bunch_of_core_ch_queries.rs  test_bunch_of_csp_queries.rs  test_bunch_of_one_break_core_ch_queries.rs  test_ch.rs  test_ch_pot.rs  test_ch_pot_propagate_all.rs  test_core_ch_on_road_network.rs  test_csp_bidir.rs  test_csp_on_road_network.rs  test_on_road_network.rs  test_one_break_core_ch_on_road_network.rs
(+28 files in other folders)
